--- a/public/404.html
+++ b/public/404.html
@@ -18,9 +18,10 @@
 
 <body>
   <!-- This file lives in public/404.html -->
+  <img src="Jim.jpg"/>
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Sorry Jim can't fix it for you to see that page</h1>
+    <p>Hmmm, that makes the scenic journey uncomfortable</p>
   </div>
 </body>
 </html>
