--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,7 @@
 
 <body>
   <!-- This file lives in public/404.html -->
-  <img src="Jim.jpg"/>
+  <img src="/Jim.jpg"/>
   <div class="dialog">
     <h1>Sorry Jim can't fix it for you to see that page</h1>
     <p>Hmmm, that makes the scenic journey uncomfortable</p>
